--- a/html1.html
+++ b/html1.html
@@ -6,6 +6,10 @@
     <title>Programa di viaggio</title>
 </head>
 <body>
-    <th1>Il mio viaggio</th1>
+  <h1>Il mio viaggio</h1>
+  <img src="img/IMG_0550.JPG" alt="viewpoit of the street" width="100">
+  <img src="img/IMG_0568.JPG" alt="viewpoit of the street" width="100">
+  <img src="img/IMG_0569.JPG" alt="viewpoit of the street" width="100">
+
 </body>
 </html>
