--- a/html1.html
+++ b/html1.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
-<html lang= "en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content=" width=device-width, initial scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content=" width=device-width, initial scale=1.0" />
     <title>Programa di viaggio</title>
-</head>
-<body>
-  <h1>Il mio viaggio</h1>
-  <img src="img/IMG_0550.JPG" alt="viewpoit of the street" width="100">
-  <img src="img/IMG_0568.JPG" alt="viewpoit of the street" width="100">
-  <img src="img/IMG_0569.JPG" alt="viewpoit of the street" width="100">
+  </head>
+  <body>
+    <h1>Il mio viaggio</h1>
+    <img src="img/IMG_0550.JPG" alt="viewpoit of the street" width="200" />
+    <img src="img/IMG_0568.JPG" alt="viewpoit of the street" width="200" />
+    <img src="img/IMG_0569.JPG" alt="viewpoit of the street" width="200" />
 
-</body>
+    <hr />
+    <h3>Spese</h3>
+    <div>
+      <table>
+        <tr>
+          <th>Numero</th>
+          <th>Descrizione</th>
+          <th>Costo</th>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto aereo</td>
+          <td>100&euro;</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Biglietto aereo</td>
+          <td>150&euro;</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Biglietto aereo</td>
+          <td>175&euro;</td>
+        </tr>
+        <tr>
+          <td>
+            <strong>TOTALE </strong>
+          </td>
+          <td></td>
+          <td>360&euro;</td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
