--- a/html1.html
+++ b/html1.html
@@ -45,5 +45,15 @@
         </tr>
       </table>
     </div>
+    <hr />
+
+    <h4>Cose da portare</h4>
+    <ul>
+      <li>Doposci &check;</li>
+      <li>Piumino &cross;</li>
+      <li>Calze lana merinos &cross;</li>
+      <li>Sciarpa e cappello &check;</li>
+    </ul>
+    <hr />
   </body>
 </html>
