--- a/html1.html
+++ b/html1.html
@@ -55,5 +55,35 @@
       <li>Sciarpa e cappello &check;</li>
     </ul>
     <hr />
+
+    <h4>Info Utili</h4>
+    <ol>
+      <li>Numeri utili di emergenza</li>
+      <ul>
+        <li><strong>999</strong> &dash; Emergenza</li>
+        <li><strong>101</strong> &dash; Numero polizia</li>
+        <li><strong>111</strong> &dash; Numero emergenza medica</li>
+      </ul>
+      <li>Hotel</li>
+      <ul>
+        <li><strong>Nome Hotel</strong>&colon; Two Rivers Hotel</li>
+        <li>
+          <strong>Indirizzo Hotel</strong>&colon; 205 4, 880
+          Kirkjubæjarklaustur, Islanda
+        </li>
+      </ul>
+      <li>Aereo</li>
+      <ul>
+        <li>
+          <strong>Volo di andata</strong>&colon; Y1234X&sbquo; ore 9&colon;30 da
+          Milano Malpensa
+        </li>
+        <li>
+          <strong>Volo di ritorno</strong>&colon;Y4321X&sbquo; ore 20&colon;40
+          da Keflavik
+        </li>
+      </ul>
+    </ol>
+    <hr />
   </body>
 </html>
