--- a/html1.html
+++ b/html1.html
@@ -85,5 +85,8 @@
       </ul>
     </ol>
     <hr />
+
+    <h4>Link guida online</h4>
+    <a href="https://guidetoiceland.is/it">Guide to Iceland</a>
   </body>
 </html>
