--- a/subhtml1.html
+++ b/subhtml1.html
@@ -6,7 +6,14 @@
     <title>Incremental and Decremental support vector machine learning</title>
   </head>
   <body>
-    <h1>Incremental and Decremental support vector machine learning</h1>
+    <h1>Incremental and Decremental Support Vector Machine Learning</h1>
     <hr />
+    <div>
+      <h3>Gert Cauwenberghs</h3>
+      <p>CLSP&sbquo;ECE Dept.</p>
+      <p>Johns Hopkins University</p>
+      <p>Baltimore&sbquo; MD 21234</p>
+      <p><i>gert@ihu.edu</i></p>
+    </div>
   </body>
 </html>
